z-index issue on the simple search fixed

--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -101,6 +101,8 @@
       list-style: none;
       border: 1px $gray solid;
       border-top: none;
+      background: white;
+      z-index: 99;
       .ui-searchbox-hit {
         display: flex;
         padding: 10px 5px;
